<resources>
    <string name="app_name">menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="citas">Citas</string>
    <string name="agregar_cita">Agregar Cita</string>
    <string name="agregar_nueva_materia">Agregar Nueva Materia</string>
    <string name="perfil">perfil</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="entrar">Entrar</string>
    <string name="no_tienes_cuenta_registrate_aqui">¿No tienes Cuenta? Registrate Aqui</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="inicio">Inicio</string>
</resources>